# agenthq

./: .dockerignore  .gitignore  AUDIT_LOGGING.md  AUTHORIZATION.md  CLEANUP_AUDIT.md  DEMO.md  DEPLOYMENT.md  Dockerfile  FRONTEND_AUDIT.md  GATEWAY_INTEGRATION.md  HARDENING_AUDIT.md  MCP_GATEWAY_RELEASE_AUDIT.md  MCP_RELEASE_AUDIT.md  PERFORMANCE_AUDIT.md  PRE_COMMIT_SECURITY_CHECK.md  RATE_LIMITING.md  README.md  RELEASE_NOTES.md  RLS_AUDIT.md  SECURITY_AUDIT.md  VERSION.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202606050001_create_agents_table.py  202606050002_create_audit_logs_table.py  202606050003_create_approvals_table.py  (+21 more)
backend/app/: __init__.py  main.py  seed.py
backend/tests/: conftest.py  test_agent_tools.py  test_agents.py  test_approvals.py  test_audit_logs.py  test_auth.py  test_compliance.py  test_config.py  test_dashboard.py  test_execution_policy_enforcement.py  test_executions.py  test_governance_alerts.py  test_health.py  test_incidents.py  test_mcp_discovery.py  test_mcp_execution.py  test_mcp_gateway.py  test_mcp_servers.py  test_organization_invites.py  test_organizations.py  test_pagination.py  test_policy_decisions.py  test_policy_rules.py  test_policy_simulations.py  test_query_counts.py  test_rate_limiting.py  test_risk_compliance.py  test_rls_migration.py  test_security_hardening.py  test_seed.py  test_tenant_scoping.py  test_text_limits.py  test_tool_governance.py  test_transaction_safety.py
(+149 files in other folders)
