[project]
name = "agenthq-backend"
version = "0.1.0"
description = "Backend foundation for AgentHQ, an enterprise agent governance platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.3",
    "fastapi[standard]>=0.115.0",
    "psycopg[binary]>=3.2.2",
    "pydantic-settings>=2.5.2",
    "sqlalchemy>=2.0.35",
]

[project.scripts]
agenthq-seed = "app.seed:main"

[dependency-groups]
dev = [
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
